include/starpu_data.h


struct _starpu_data_state;
typedef struct _starpu_data_state *starpu_data_handle_t;
enum starpu_data_access_mode
{
	STARPU_R	 = (1 << 0),		  
	STARPU_W	 = (1 << 1),		  
	STARPU_RW	 = (STARPU_R | STARPU_W), 
	STARPU_SCRATCH	 = (1 << 2),		  
	STARPU_REDUX	 = (1 << 3),		  
	STARPU_COMMUTE	 = (1 << 4),		  
	STARPU_SSEND	 = (1 << 5),		  
	STARPU_LOCALITY	 = (1 << 6),		  
	STARPU_MPI_REDUX = ((1 << 7)|STARPU_RW|STARPU_COMMUTE),
	STARPU_NOPLAN = (1 << 8),                 
	STARPU_UNMAP = (1 << 9),                  
	STARPU_NOFOOTPRINT = (1 << 10),           
	STARPU_NONE	 = (1 << 11),		  
	STARPU_RECURSIVE_TASK_STRONG = (1 << 12), 
	STARPU_MPI_SAME=(1<<13),   
	STARPU_ACCESS_MODE_MAX = (1 << 14)        
};
enum starpu_is_prefetch
{
	STARPU_FETCH = 0,
	STARPU_TASK_PREFETCH = 1,
	STARPU_PREFETCH = 2,
	STARPU_IDLEFETCH = 3,
	STARPU_NFETCH
};
void starpu_data_unregister(starpu_data_handle_t handle);
void starpu_data_unregister_no_coherency(starpu_data_handle_t handle);
void starpu_data_unregister_submit(starpu_data_handle_t handle);
void starpu_data_invalidate(starpu_data_handle_t handle);
void starpu_data_invalidate_submit(starpu_data_handle_t handle);
void starpu_data_advise_as_important(starpu_data_handle_t handle, unsigned is_important);
int starpu_data_acquire(starpu_data_handle_t handle, enum starpu_data_access_mode mode);
int starpu_data_acquire_on_node(starpu_data_handle_t handle, int node, enum starpu_data_access_mode mode);
int starpu_data_acquire_cb(starpu_data_handle_t handle, enum starpu_data_access_mode mode, void (*callback)(void *), void *arg);
int starpu_data_acquire_on_node_cb(starpu_data_handle_t handle, int node, enum starpu_data_access_mode mode, void (*callback)(void *), void *arg);
int starpu_data_get_on_node_cb_prio(starpu_data_handle_t handle, int node, enum starpu_data_access_mode mode, void (*callback)(void *), void *arg, enum starpu_is_prefetch prefetch, int prio);
int starpu_data_acquire_cb_sequential_consistency(starpu_data_handle_t handle, enum starpu_data_access_mode mode, void (*callback)(void *), void *arg, int sequential_consistency);
int starpu_data_acquire_on_node_cb_sequential_consistency(starpu_data_handle_t handle, int node, enum starpu_data_access_mode mode, void (*callback)(void *), void *arg, int sequential_consistency);
int starpu_data_acquire_on_node_cb_sequential_consistency_sync_jobids(starpu_data_handle_t handle, starpu_data_handle_t *real_handle, int node, enum starpu_data_access_mode mode, void (*callback_soon)(void *arg, double delay), void (*callback_acquired)(void *arg, int *node, enum starpu_data_access_mode mode), void (*callback)(void *arg), void *arg, int sequential_consistency, int quick, long *pre_sync_jobid, long *post_sync_jobid, int prio);
void starpu_data_release(starpu_data_handle_t handle);
void starpu_data_release_on_node(starpu_data_handle_t handle, int node);
typedef struct starpu_arbiter *starpu_arbiter_t;
void starpu_data_assign_arbiter(starpu_data_handle_t handle, starpu_arbiter_t arbiter);
void starpu_arbiter_destroy(starpu_arbiter_t arbiter);
int starpu_data_request_allocation(starpu_data_handle_t handle, unsigned node);
int starpu_data_fetch_on_node(starpu_data_handle_t handle, unsigned node, unsigned async);
int starpu_data_prefetch_on_node(starpu_data_handle_t handle, unsigned node, unsigned async);