include/starpu_worker.h


void starpu_worker_set_going_to_sleep_callback(void (*callback)(unsigned workerid));
void starpu_worker_set_waking_up_callback(void (*callback)(unsigned workerid));